--- a/es/es.html
+++ b/es/es.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,41 +8,67 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <header class="header">
-        <div id="header-placeholder"></div>
-    </header>
+    <div id="header-placeholder"></div>
+</header>
+
 <body>
     <main>
-            <section class="homeContainer">
-                <img src="../img/eu.jpeg" alt="Jazão Cordeiro, un hombre latino robusto vistiendo ropa negra" class="personalPhoto">
-                <article class="introduction">
-                    <h1 class="h1">Portafolio de Jazão Cordeiro Rosa</h1>
-                    <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">¡Bienvenido! Soy Jazão, pero puedes llamarme Jazzo</span> (puedes encontrar mi nombre completo y otros detalles en la sección <span style="color: var(--letter-b-bright); font-weight: bold;">"Sobre mi"</span> ). Soy un programador web front-end que vive en Brasil, tengo 38 años y <b>hablo portugués, inglés y español. </b>. Este sitio está disponible en los tres idiomas.</p>
+        <section class="homeContainer">
+            <img src="../img/eu.jpeg" alt="Jazão Cordeiro, un hombre latino robusto vistiendo ropa negra"
+                class="personalPhoto">
+            <article class="introduction">
+                <h1 class="h1">Portafolio de Jazão Cordeiro Rosa</h1>
+                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">¡Bienvenido! Soy
+                        Jazão, pero puedes llamarme Jazzo</span> (puedes encontrar mi nombre completo y otros detalles
+                    en la sección <span style="color: var(--letter-b-bright); font-weight: bold;">"Sobre mi"</span> ).
+                    Soy un programador web front-end que vive en Brasil, tengo 38 años y <b>hablo portugués, inglés y
+                        español. </b>. Este sitio está disponible en los tres idiomas.</p>
 
-                    <p class="paragraph">Este sitio sirve tanto como mi currículum como mi portafolio, y también forma parte de mi portafolio. Aquí encontrarás información sobre los cursos que he estudiado, certificados, algunos artículos que he escrito, mis proyectos y cualquier otra cosa que encuentre interesante. Cualquier cosa no relacionada con el trabajo se colocará en la sección "Varios".</p><br>
+                <p class="paragraph">Este sitio sirve tanto como mi currículum como mi portafolio, y también forma parte
+                    de mi portafolio. Aquí encontrarás información sobre los cursos que he estudiado, certificados,
+                    algunos artículos que he escrito, mis proyectos y cualquier otra cosa que encuentre interesante.
+                    Cualquier cosa no relacionada con el trabajo se colocará en la sección "Varios".</p><br>
 
-                    <p class="paragraph">Vengo estudiando programación web front-end seriamente desde 2023. Antes de eso, había completado algunos proyectos personales y hecho algunos trabajos como freelancer, pero nunca tuve la intención de seguirlo como carrera. Lo que quiero decir es que hoy estoy absolutamente fascinado por la programación y planeo profundizar mucho más en ello. ¿Cómo no me di cuenta de esto antes?</p><br>
-            </section>
-            <section class="container">
-                <h2 class="h2">¿Qué se puede encontrar en este sitio web?</h2>
+                <p class="paragraph">Vengo estudiando programación web front-end seriamente desde 2023. Antes de eso,
+                    había completado algunos proyectos personales y hecho algunos trabajos como freelancer, pero nunca
+                    tuve la intención de seguirlo como carrera. Lo que quiero decir es que hoy estoy absolutamente
+                    fascinado por la programación y planeo profundizar mucho más en ello. ¿Cómo no me di cuenta de esto
+                    antes?</p><br>
+        </section>
+        <section class="container">
+            <h2 class="h2">¿Qué se puede encontrar en este sitio web?</h2>
 
-                <p class="paragraph">
-                    <a href="sobre-es.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Sobre mí:</span></a>
-                    Aquí puedes aprender más sobre el currículum, experiencias, títulos, campos de estudio preferidos, cursos y más de Jazzo. En esta sección, también encontrarás mis certificados.</p>
+            <p class="paragraph">
+                <a href="sobre-es.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Sobre
+                        mí:</span></a>
+                Aquí puedes aprender más sobre el currículum, experiencias, títulos, campos de estudio preferidos,
+                cursos y más de Jazzo. En esta sección, también encontrarás mis certificados.
+            </p>
 
-                <p class="paragraph">
-                    <a href="portafolio.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Portafolio:</span></a>
-                    En esta sección especial, encontrarás enlaces a mis mejores proyectos. Estos te llevarán a GitHub, donde podrás revisar el código, así como a imágenes, videos o proyectos en vivo donde podrás ver y probar el producto final.</p>
+            <p class="paragraph">
+                <a href="portafolio.html"><span
+                        style="color: var(--letter-b-bright); font-weight: bold;">Portafolio:</span></a>
+                En esta sección especial, encontrarás enlaces a mis mejores proyectos. Estos te llevarán a GitHub, donde
+                podrás revisar el código, así como a imágenes, videos o proyectos en vivo donde podrás ver y probar el
+                producto final.
+            </p>
 
-                <p class="paragraph">
-                    <a href="contacto.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Contacto: </span></a>
-                    Si deseas ponerte en contacto, encontrarás mis datos de contacto aquí. También puedes enviarme un mensaje a través del formulario si deseas saber más.</p>
+            <p class="paragraph">
+                <a href="contacto.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Contacto:
+                    </span></a>
+                Si deseas ponerte en contacto, encontrarás mis datos de contacto aquí. También puedes enviarme un
+                mensaje a través del formulario si deseas saber más.
+            </p>
 
-                <p class="paragraph">
-                    <a href="miscelaneos.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Varios:</span></a>
-                    En esta sección, encontrarás información general y aleatoria sobre mí, como algunos de mis intereses. Definitivamente no es necesario, pero pensé que sería divertido incluir.</p>
+            <p class="paragraph">
+                <a href="miscelaneos.html"><span
+                        style="color: var(--letter-b-bright); font-weight: bold;">Varios:</span></a>
+                En esta sección, encontrarás información general y aleatoria sobre mí, como algunos de mis intereses.
+                Definitivamente no es necesario, pero pensé que sería divertido incluir.
+            </p>
 
-                </article>
-            </section>
+            </article>
+        </section>
         </div>
     </main>
     <footer class="footer">
@@ -54,7 +81,7 @@
                     document.getElementById('footer-placeholder').innerHTML = data;
                 });
         </script>
-        </footer>
+    </footer>
 </body>
 
 </html>
