--- a/header.html
+++ b/header.html
@@ -1,44 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>header</title>
 </head>
+
 <body>
-        <header class="header">
-            <section class="groupHead">
-                <a href="#" class="logo"><img src="./img/logo.png" alt="logo" class="mylogo"></a>
-                <nav class="navbar">  
-                   <a href="index.html" class="listagem">Home</a><p class="separador">|</p> 
-                    <a href="about-me-en.html" class="listagem">About me</a><p class="separador">|</p>
-                    <a href="portfolio.html" class="listagem">Portfolio</a><p class="separador">|</p>
-                    <a href="contact.html" class="listagem">Contact</a><p class="separador">|</p>
-                    <a href="miscelaneous.html" class="listagem">Miscellaneous</a>            
-                </nav>
+    <header class="header">
+        <section class="groupHead">
+            <a href="#" class="logo"><img src="./img/logo.png" alt="logo" class="mylogo"></a>
+            <nav class="navbar">
+                <a href="index.html" class="listagem">Home</a>
+                <p class="separador">|</p>
+                <a href="about-me-en.html" class="listagem">About me</a>
+                <p class="separador">|</p>
+                <a href="portfolio.html" class="listagem">Portfolio</a>
+                <p class="separador">|</p>
+                <a href="contact.html" class="listagem">Contact</a>
+                <p class="separador">|</p>
+                <a href="miscelaneous.html" class="listagem">Miscellaneous</a>
+            </nav>
 
-                    <div class="icons">
-                        <a href="./pt-br/pt-br.html"><img class="img1" width="40" height="43" src="https://img.icons8.com/color/48/brazil-circular.png" alt="Brazilian Portuguese"/><span class="tooltip tooltip1">Language: Portuguese</span></a>
-                        <a href="index.html"><img class="img2" width="40" height="43" src="https://img.icons8.com/color/48/great-britain-circular.png" alt="English"/><span class="tooltip tooltip2">Language: English</span></a>
-                        <a href="./es/es.html"><img class="img3" width="40" height="43" src="https://img.icons8.com/color/48/spain2-circular.png" alt="Spanish"/><span class="tooltip tooltip3">Language: Spanish</span></a>
-                    </div>
-                    <div class="mode">
-                        <h1>Dark/Light</h1>
-                        <div class="trilho" id="trilho">
-                            <div class="indicador"></div>
-                        </div>
-                    </div>
-                    <div class="hamburger">
-                        <span class="line line1"></span>
-                        <span class="line line2"></span>
-                        <span class="line line3"></span>
-                    </div>
+            <div class="icons">
+                <a href="./pt-br/pt-br.html"><img class="img1" width="40" height="43"
+                        src="https://img.icons8.com/color/48/brazil-circular.png" alt="Brazilian Portuguese" /><span
+                        class="tooltip tooltip1">Language: Portuguese</span></a>
+                <a href="index.html"><img class="img2" width="40" height="43"
+                        src="https://img.icons8.com/color/48/great-britain-circular.png" alt="English" /><span
+                        class="tooltip tooltip2">Language: English</span></a>
+                <a href="./es/es.html"><img class="img3" width="40" height="43"
+                        src="https://img.icons8.com/color/48/spain2-circular.png" alt="Spanish" /><span
+                        class="tooltip tooltip3">Language: Spanish</span></a>
+            </div>
+            <div class="mode">
+                <h1>Dark/Light</h1>
+                <div class="trilho" id="trilho">
+                    <div class="indicador"></div>
+                </div>
+            </div>
+            <div class="hamburger">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+            </div>
 
 
 
-            </section>
-        </header>
-        <script src="main.js"></script>
+        </section>
+    </header>
+    <script src="main.js"></script>
 </body>
+
 </html>
