--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 
 
 <body>
-     <header class="header">
+    <header class="header">
         <div id="header-placeholder"></div>
     </header>
- <main>
+    <main>
         <section class="homeContainer">
             <img src="./img/eu.jpeg" alt="Jazão Cordeiro, a bulky latin guy dressed in black" class="personalPhoto">
             <article class="introduction">
                 <h1 class="h1">Jazão Cordeiro Rosa's Portfolio</h1>
                 <p class="paragraph">
-                    <span style="color: var(--letter-b-bright); font-weight: bold;">Welcome! I'm Jazão, but you can call me Jazzo</span>
+                    <span style="color: var(--letter-b-bright); font-weight: bold;">Welcome! I'm Jazão, but you can call
+                        me Jazzo</span>
                     (you can find my full name and other details in the
                     <span style="color: var(--letter-b-bright); font-weight: bold;">"About Me"</span> section).
-                    I'm a front-end web developer living in Brazil, 38 years old, and <b>I speak Portuguese, English, and Spanish</b>.
+                    I'm a front-end web developer living in Brazil, 38 years old, and <b>I speak Portuguese, English,
+                        and Spanish</b>.
                     This site is available in all three languages.
                 </p>
 
@@ -35,7 +37,8 @@
                 </p><br>
 
                 <p class="paragraph">
-                    I've been seriously studying front-end web programming since 2023. Before that, I had completed a few personal projects and done some freelance work for
+                    I've been seriously studying front-end web programming since 2023. Before that, I had completed a
+                    few personal projects and done some freelance work for
                     friends and family, but I never intended to pursue it as a career. What I mean is that today I
                     am absolutely fascinated by programming, and I plan to dive much deeper into it! How did I not
                     realize this sooner?
@@ -47,30 +50,34 @@
             <h2 class="h2">What can be found in this website?</h2>
 
             <p class="paragraph">
-                <a href="about-me-en.html"><span style="color: var(--letter-b-bright); font-weight: bold;">About me:</span></a>
+                <a href="about-me-en.html"><span style="color: var(--letter-b-bright); font-weight: bold;">About
+                        me:</span></a>
                 Here you can learn more about Jazzo's resume, experience, degrees, preferred fields of study,
                 courses, and more. In this section, you'll also find my certificates.
             </p>
 
             <p class="paragraph">
-                <a href="portfolio.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Portfolio:</span></a>
+                <a href="portfolio.html"><span
+                        style="color: var(--letter-b-bright); font-weight: bold;">Portfolio:</span></a>
                 In this special section, you'll find links to my best projects. These will lead you to
                 GitHub, where you can check the code, as well as to images, videos, or live projects where you can
                 see and test the final product.
             </p>
 
             <p class="paragraph">
-                <a href="contact.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Contact:</span></a>
+                <a href="contact.html"><span
+                        style="color: var(--letter-b-bright); font-weight: bold;">Contact:</span></a>
                 If you'd like to get in touch, you'll find my contact information here. You can also send me a message
                 through the form if you'd like to know more.
             </p>
 
             <p class="paragraph">
-                <a href="miscelaneous.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Miscellaneous:</span></a>
+                <a href="miscelaneous.html"><span
+                        style="color: var(--letter-b-bright); font-weight: bold;">Miscellaneous:</span></a>
                 In this section, you'll find general and random information about me, like some of my
                 interests. It's definitely not necessary, but I thought it would be fun to include.
             </p>
-            
+
         </section>
 
     </main>
@@ -85,7 +92,7 @@
                     document.getElementById('footer-placeholder').innerHTML = data;
                 });
         </script>
-        </footer>
+    </footer>
 </body>
 
 </html>
