--- a/pt-br/pt-br.html
+++ b/pt-br/pt-br.html
@@ -9,61 +9,78 @@
 </head>
 
 <body>
-       <header class="header">
+    <header class="header">
         <div id="header-placeholder"></div>
     </header>
-     <main>
+    <main>
         <section class="homeContainer">
-            <img src="../img/eu.jpeg" alt="Jazão Cordeiro, um homem latino corpulento vestido de preto" class="personalPhoto">
+            <img src="../img/eu.jpeg" alt="Jazão Cordeiro, um homem latino corpulento vestido de preto"
+                class="personalPhoto">
             <article class="introduction">
                 <h1 class="h1">Portfólio de Jazão Cordeiro Rosa</h1>
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Bem-vindo! Eu sou Jazão, mas você pode me chamar de Jazzo</span> (você pode encontrar meu nome completo e
-                    outros detalhes na seção <span style="color: var(--letter-b-bright); font-weight: bold;">"Sobre Mim"</span>).
+                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Bem-vindo! Eu sou
+                        Jazão, mas você pode me chamar de Jazzo</span> (você pode encontrar meu nome completo e
+                    outros detalhes na seção <span style="color: var(--letter-b-bright); font-weight: bold;">"Sobre
+                        Mim"</span>).
                     Sou um desenvolvedor front-end de sites, moro no Brasil, tenho 38 anos e <b>falo português, inglês
-                    e espanhol</b>. Este site está disponível em todos os três idiomas.</p>
+                        e espanhol</b>. Este site está disponível em todos os três idiomas.</p>
 
-                <p class="paragraph">Este site serve como meu currículo e portfólio, e também faz parte do meu portfólio. Aqui,
-                    você encontrará informações sobre cursos que fiz, certificados, alguns artigos que escrevi, meus projetos e
+                <p class="paragraph">Este site serve como meu currículo e portfólio, e também faz parte do meu
+                    portfólio. Aqui,
+                    você encontrará informações sobre cursos que fiz, certificados, alguns artigos que escrevi, meus
+                    projetos e
                     qualquer outra coisa que eu achar interessante. Qualquer coisa não relacionada ao trabalho será
                     colocada na seção "Diversos".
                     Você também encontrará um currículo resumido disponível para download, caso prefira.</p><br>
 
-                <p class="paragraph">Estou estudando programação front-end de forma séria desde 2023. Antes disso, eu havia feito alguns projetos pessoais e trabalhado como freelancer para
-                    amigos e familiares, mas nunca tive a intenção de seguir isso como carreira. O que quero dizer é que hoje
-                    estou absolutamente fascinado pela programação, e planejo me aprofundar muito mais nisso! Como não percebi isso antes?</p><br>
-                    
-           </article>
-                </section>
+                <p class="paragraph">Estou estudando programação front-end de forma séria desde 2023. Antes disso, eu
+                    havia feito alguns projetos pessoais e trabalhado como freelancer para
+                    amigos e familiares, mas nunca tive a intenção de seguir isso como carreira. O que quero dizer é que
+                    hoje
+                    estou absolutamente fascinado pela programação, e planejo me aprofundar muito mais nisso! Como não
+                    percebi isso antes?</p><br>
+
+            </article>
+        </section>
 
 
-            <section class="container">
+        <section class="container">
 
-                <h2 class="h2">O que você pode encontrar neste site?</h2>
+            <h2 class="h2">O que você pode encontrar neste site?</h2>
 
-                <p class="paragraph">
-                    <a href="./sobre.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Sobre mim:</span></a>
-                    Aqui você pode aprender mais sobre o currículo, experiência, graus, áreas de estudo preferidas,
-                    cursos e muito mais de Jazzo. Nesta seção, você também encontrará meus certificados.</p>
+            <p class="paragraph">
+                <a href="./sobre.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Sobre
+                        mim:</span></a>
+                Aqui você pode aprender mais sobre o currículo, experiência, graus, áreas de estudo preferidas,
+                cursos e muito mais de Jazzo. Nesta seção, você também encontrará meus certificados.
+            </p>
 
-                <p class="paragraph">
-                    <a href="./portfoliopt.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Portfólio:</span></a>
-                    Nesta seção especial, você encontrará links para meus melhores projetos. Esses links levarão você ao
-                    GitHub, onde você pode verificar o código, além de imagens, vídeos ou projetos ao vivo onde você pode
-                    ver e testar o produto final.</p>
+            <p class="paragraph">
+                <a href="./portfoliopt.html"><span
+                        style="color: var(--letter-b-bright); font-weight: bold;">Portfólio:</span></a>
+                Nesta seção especial, você encontrará links para meus melhores projetos. Esses links levarão você ao
+                GitHub, onde você pode verificar o código, além de imagens, vídeos ou projetos ao vivo onde você pode
+                ver e testar o produto final.
+            </p>
 
-                <p class="paragraph">
-                    <a href="./contato.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Contato: </span></a>
-                    Se você quiser entrar em contato, encontrará minhas informações de contato aqui. Você também pode me enviar uma mensagem
-                    através do formulário, caso queira saber mais.</p>
+            <p class="paragraph">
+                <a href="./contato.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Contato:
+                    </span></a>
+                Se você quiser entrar em contato, encontrará minhas informações de contato aqui. Você também pode me
+                enviar uma mensagem
+                através do formulário, caso queira saber mais.
+            </p>
 
-                <p class="paragraph">
-                    <a href="./miscelanea.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Diversos:</span></a>
-                    Nesta seção, você encontrará informações gerais e aleatórias sobre mim, como alguns dos meus
-                    interesses. Definitivamente não é necessário, mas achei que seria divertido incluir.</p>
+            <p class="paragraph">
+                <a href="./miscelanea.html"><span
+                        style="color: var(--letter-b-bright); font-weight: bold;">Diversos:</span></a>
+                Nesta seção, você encontrará informações gerais e aleatórias sobre mim, como alguns dos meus
+                interesses. Definitivamente não é necessário, mas achei que seria divertido incluir.
+            </p>
 
-            </section>
+        </section>
 
-        </main>
+    </main>
     <footer class="footer">
         <script src="../main.js"></script>
         <div id="footer-placeholder"></div>
