--- a/es/header-es.html
+++ b/es/header-es.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,35 +8,45 @@
     <title>encabezado</title>
 </head>
 
-        <header class="header">
-            <section class="groupHead">
-                <a href="#" class="logo"><img src="../img/logo.png" alt="logo" class="mylogo"></a>
-                <nav class="navbar">
-                    <a href="es.html" class="listagem">Inicio</a><p class="separador">|</p>
-                    <a href="sobre-es.html" class="listagem">Sobre mí</a><p class="separador">|</p>
-                    <a href="portafolio.html" class="listagem">Portafolio</a><p class="separador">|</p>
-                    <a href="contacto.html" class="listagem">Contacto</a><p class="separador">|</p>
-                    <a href="miscelaneos.html" class="listagem">Misceláneos</a>
-                </nav>
-                    <div class="icons">
-                        <a href="../pt-br/pt-br.html"><img class="img1" width="40" height="43" src="https://img.icons8.com/color/48/brazil-circular.png" alt="Brazilian Portuguese"/><span class="tooltip tooltip1">Idioma: Portugues</span></a>
-                        <a href="../index.html"><img class="img2" width="40" height="43" src="https://img.icons8.com/color/48/great-britain-circular.png" alt="English"/><span class="tooltip tooltip2">Idioma: Ingles</span></a>
-                        <a href="./es.html"><img class="img3" width="40" height="43" src="https://img.icons8.com/color/48/spain2-circular.png" alt="Spanish"/><span class="tooltip tooltip3">Idioma: Español</span></a>
-                    </div>
-                    <div class="mode">
-                        <h1>Dark/Light</h1>
-                        <div class="trilho" id="trilho">
-                            <div class="indicador"></div>
-                        </div>
-                    </div>
-                          <div class="hamburger">
-                        <span class="line line1"></span>
-                        <span class="line line2"></span>
-                        <span class="line line3"></span>
-                    </div>
-            </section>
+<header class="header">
+    <section class="groupHead">
+        <a href="#" class="logo"><img src="../img/logo.png" alt="logo" class="mylogo"></a>
+        <nav class="navbar">
+            <a href="es.html" class="listagem">Inicio</a>
+            <p class="separador">|</p>
+            <a href="sobre-es.html" class="listagem">Sobre mí</a>
+            <p class="separador">|</p>
+            <a href="portafolio.html" class="listagem">Portafolio</a>
+            <p class="separador">|</p>
+            <a href="contacto.html" class="listagem">Contacto</a>
+            <p class="separador">|</p>
+            <a href="miscelaneos.html" class="listagem">Misceláneos</a>
+        </nav>
+        <div class="icons">
+            <a href="../pt-br/pt-br.html"><img class="img1" width="40" height="43"
+                    src="https://img.icons8.com/color/48/brazil-circular.png" alt="Brazilian Portuguese" /><span
+                    class="tooltip tooltip1">Idioma: Portugues</span></a>
+            <a href="../index.html"><img class="img2" width="40" height="43"
+                    src="https://img.icons8.com/color/48/great-britain-circular.png" alt="English" /><span
+                    class="tooltip tooltip2">Idioma: Ingles</span></a>
+            <a href="./es.html"><img class="img3" width="40" height="43"
+                    src="https://img.icons8.com/color/48/spain2-circular.png" alt="Spanish" /><span
+                    class="tooltip tooltip3">Idioma: Español</span></a>
+        </div>
+        <div class="mode">
+            <h1>Dark/Light</h1>
+            <div class="trilho" id="trilho">
+                <div class="indicador"></div>
+            </div>
+        </div>
+        <div class="hamburger">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+        </div>
+    </section>
 </header>
-        <script src="../main.js"></script>
+<script src="../main.js"></script>
 </body>
 
 </html>
